--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
         const AES_CBC_ALGORITHM = 'AES-CBC';
 
          // WebSocket Configuration (Replace with your actual WebSocket server URL)
-        const websocketServerURL = "ws://your-websocket-server-url:8080"; // Replace with your WebSocket server URL
+        const websocketServerURL = "wss://echo.websocket.org"; // Replace with your WebSocket server URL
         let websocket;
 
         // Function to initialize the WebSocket connection
